--- a/src/components/index.module.css
+++ b/src/components/index.module.css
@@ -1,3 +1,13 @@
+:root {
+  --bg-color: #10032A;
+  --ripple-color: #22065A;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: #fff;
+}
+
 .list {
   display: grid;
   margin: 0;
@@ -51,4 +61,22 @@
 .intro {
   max-width: none;
   line-height: var(--line-height-loose);
+}
+
+
+.container {
+  max-width: 1280px;
+  margin: auto;
+  display: flex;
+}
+
+.menu {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  align-self: flex-start;
+}
+
+.mainBody {
+
 }
